<resources>
    <string name="appTag">NCRAPP</string>
    <string name="app_name">Núcleo de Conservação e Restauro</string>
    <string name="generalBackButton">Voltar</string>
    <string name="generalConfirmButton">Confirmar</string>
    <string name="generalNotFilledField">Tem que preencher este campo.</string>
    <string name="mainNavEventsButton">Eventos</string>
    <string name="mainNavSabiasButton">Sabias Que</string>
    <string name="mainNavPersonalButton">Perfil</string>
    <string name="mainNavStaffButton">Organização</string>
    <string name="mainNavInfoButton">Informação</string>
    <string name="mainNavScheduleButton">Horários</string>
    <string name="mainNavSettingsButton">Definições</string>
    <string name="mainEventTabIncreverBtn">Increver-me</string>
    <string name="mainEventTabDetalhesBtn">Detalhes</string>
    <string name="addEventTextEventNameBox">Nome</string>
    <string name="addEventTextEventDescBox">Descrição</string>
    <string name="addEventTextEventLocalBox">Localização</string>
    <string name="addEventTextEventDateBox">Data</string>
    <string name="addEventTextEventTranspBox">Sim</string>
    <string name="addEventTextEventImgBox">Escolher Imagem </string>
    <string name="addEventTextEventImgBoxCap">Tirar Fotografia </string>
    <string name="addEventTextEventAddBtn">Criar Evento </string>
    <string name="addEventTextEventAddTimeDateBtn">Escolher Data </string>
    <string name="addEventTitleError">Introduza um nome</string>
    <string name="addEventLocationError">Introduza uma localização</string>
    <string name="eventDetailNameTitle">Nome do Evento </string>
    <string name="eventDetailDescriptionTitle">Descrição do Evento </string>
    <string name="eventDetailLocationTitle">Localização do Evento </string>
    <string name="eventDetailTransportTitle">Tem Transporte? </string>
    <string name="eventDetailInitDateTitle">Data de inicio do Evento </string>
    <string name="eventDetailEndDateTitle">Data de fim do Evento </string>
    <string name="editEventTextEventEditBtn">Guardar </string>
    <string name="editEventTextEventDeleteBtn">Remover </string>
    <string name="sort_recent">Mais Recente</string>
    <string name="sort_old">Mais Antigo</string>
    <string name="sort_title">Ordenar por</string>
    <string name="ok">Aplicar</string>
    <string name="cancel">Cancelar</string>
    <string name="finishEvent">Evento terminado</string>
    <string name="startedEvent">Evento já começou</string>
    <string name="myDidYouKow">myDidYouKow</string>
    <string name="myEvent">myEvent</string>
    <string name="recent">Mais recente</string>
    <string name="old">Mais antigo</string>
    <string name="addDidYouKnowTextBtn">Criar Sabias Que</string>
    <string name="didYouKnowTitleError">Introduza um titulo</string>
    <string name="didYouKnowDescriptionError">Introduza uma descrição</string>
    <string name="didYouKnowReferenceError">Introduza uma referência</string>
    <string name="didYouKnowDetailNameTitle">Sabias que </string>
    <string name="didYouKnowDetailDescriptionTitle">Descrição </string>
    <string name="didYouKnowDetailReferencesTitle">Referências </string>
    <string name="didYouKnowEditBtn">Guardar </string>
    <string name="didYouKnowDeleteBtn">Remover </string>
    <string name="eventAderir">Aderir</string>
    <string name="loginEmailBoxHint">E-mail</string>
    <string name="loginEmailBoxNotFilledError">Tem que preencher o e-mail.</string>
    <string name="loginEmailBoxInvalid">E-mail inválido.</string>
    <string name="loginPasswordBoxHint">Palavra-passe</string>
    <string name="loginKeepPassword">Manter sessão iniciada</string>
    <string name="loginPasswordBoxHintNotFilledError">Tem que preencher a palavra-passe.</string>
    <string name="loginButton">Entrar</string>
    <string name="loginForgotPassword">Esqueci-me da minha palavra-passe.</string>
    <string name="loginCreateAccount">Não tem uma conta? Registe-se.</string>
    <string name="recoverPasswordTitle">Recuperar palavra-passe</string>
    <string name="recoverPasswordEmailBoxHint">Introduza o seu e-mail</string>
    <string name="recoverPasswordButton">Enviar e-mail</string>
    <string name="insertOTPTitle">Caso exista uma conta associada ao seu e-mail, foi enviado um código para a sua caixa de entrada:</string>
    <string name="insertOTPBoxHint">Inserir código</string>
    <string name="insertOTPBoxError">Código inserido inválido</string>
    <string name="insertEmptyOTPBoxError">O código não pode estar vazio</string>
    <string name="insertLenghtOTPBoxError">O código tem que ter 7 digitos</string>
    <string name="insertOTPCountdownText">Reenviar código: %1$d segundos</string>
    <string name="insertOTPCountdownText2">Clique aqui para reenviar um novo código</string>
    <string name="changePasswordTitle">Nova palavra-passe:</string>
    <string name="changePasswordBoxHint">Palavra-passe</string>
    <string name="changePasswordConfirmBoxHint">Confirmar palavra-passe</string>
    <string name="changePasswordBoxNotFilledError">Tem que prencher com uma palavra-passe</string>
    <string name="changePasswordBoxMinimumLengthError">Palavra-passe tem que ter no minimo 8 caracteres</string>
    <string name="changePasswordConfirmBoxNotFilledError">Tem que preencher com uma palavra-passe</string>
    <string name="changePasswordNotEqualError">As palavra-passes têm que ser iguais</string>
    <string name="signUpTitle">Criar uma nova conta</string>
    <string name="signUpNameBoxHint">Nome</string>
    <string name="signUpEmailBoxHint">E-mail</string>
    <string name="signUpPasswordBoxHint">Palavra-passe</string>
    <string name="signUpPasswordConfirmBoxHint">Confirmar palavra-passe</string>
    <string name="signUpButton">Registar</string>
    <string name="signUpBackToLogin">Já tem uma conta? Entre!</string>
    <string name="signUpNameBoxMinimumLength">Nome tem que ter no minimo 2 caracteres</string>
    <string name="signUpEmailBoxInvalid">E-mail inválido.</string>
    <string name="signUpPasswordBoxMinimumLengthError">Palavra-passe tem que ter no minimo 8 caracteres</string>
    <string name="signUpNotEqualError">As palavra-passes têm que ser iguais</string>
    <string name="dialogAlertTitle">Alerta</string>
    <string name="dialogAlertMessage1">Quer ativar o login por impressão digital?</string>
    <string name="dialogAlertMessage2">Tem que fazer login para poder aceder ao seu perfil.</string>
    <string name="dialogAlertMessage3">Tem a certeza que quer apagar este "Sabias que"?</string>
    <string name="dialogAlertMessage4">Tem a certeza que quer apagar o evento?</string>
    <string name="dialogAlertMessage5">Tem a certeza que quer eliminar o ficheiro "%1$s"?</string>
    <string name="dialogAlertMessage6">Quer transferir o ficheiro "%1$s" ?</string>
    <string name="dialogAlertNeutralButton">Mais tarde</string>
    <string name="dialogAlertPositiveButton1">Ativar</string>
    <string name="dialogAlertPositiveButton2">Fazer Login</string>
    <string name="dialogInfoTitle">Informação</string>
    <string name="dialogInfoMessage1">Quando pretender usar impressão digital diriga-se às definições para ativar.</string>
    <string name="dialogPositiveButton">OK</string>
    <string name="dialogNegativeButton">Não</string>
    <string name="aboutForStaff">Sobre </string>
    <string name="aboutForStaff2">Sobre: </string>
    <string name="telefoneForStaff2">Telefone: </string>
    <string name="stateForStaff2">Estado: </string>
    <string name="entryForStaff2">Data de entrada: </string>
    <string name="userID">userID</string>
    <string name="userInsertedEmail">userInsertedEmail</string>
    <string name="type">type</string>
    <string name="biometricPromptMessage">Entrar com a sua impressão digital:</string>
    <string name="useCredential">Usar credenciais</string>
    <string name="biometricLogin">BiometricLogin</string>
    <string name="isUsingBiometric">isUsingBiometric</string>
    <string name="biometricEmail">biometricEmail</string>
    <string name="isToRequestBiometric">isToRequestBiometric</string>
    <string name="userInfo">UserInfo</string>
    <string name="clientType">clientType</string>
    <string name="clientEmail">clientEmail</string>
    <string name="clientName">clientName</string>
    <string name="clientValidated">clientValidated</string>
    <string name="clientRegistrationDate">clientRegistrationDate</string>
    <string name="clientImage">clientImage</string>
    <string name="clientAbout">clientAbout</string>
    <string name="keepLogin">keepLogin</string>
    <string name="orderBy">orderBy</string>
    <string name="profileDefaultName">Erro a obter o seu nome</string>
    <string name="profileDefaultEmail">Erro a obter o seu email</string>
    <string name="profileDefaultRegist">Erro ao obter a sua data de registo</string>
    <string name="profileDefaultAbout">Diz algo sobre ti...</string>
    <string name="profileDefaultAbout2">Algo sobre mim...</string>
    <string name="profileEditName">Novo nome</string>
    <string name="profileAbout">Sobre mim:</string>
    <string name="profileClientType">Tipo de Cliente:</string>
    <string name="profileRegistDate">Data de registo:</string>
    <string name="toastMessageSuccessLogout">Logout efetuado com sucesso</string>
    <string name="leituraImpressaoDigitalErro">Ocorreu um erro na leitura da sua impressão digital</string>
    <string name="falhaAuth">Autenticação falhou</string>
    <string name="accountCreated">Conta criada com sucesso</string>
    <string name="LoginNeeded"> É necessário fazer login para se inscrever nos eventos</string>
    <string name="eventNotAvailable">Este evento não está disponível</string>
    <string name="sabiasQueCriadoComSucesso">"Sabias Que" criado com sucesso</string>
    <string name="sabiasQueEditadoComSucesso">"Sabias Que" editado com sucesso</string>
    <string name="sabiasQueRemovidoComSucesso">"Sabias Que" removido com sucesso</string>
    <string name="eventCreatedSuccess">Evento criado com sucesso</string>
    <string name="infoTitle">Núcleo de Conservação e Restauro</string>
    <string name="infoText">Somos um grupo de estudantes de conservação e restauro que visa dinamizar o curso e dar-lhe vida! Através de atividades como workshops, palestras entre outros.</string>
    <string name="infoYear">Ano de Fundação: 2023</string>
    <string name="infoPeople">Membros: 15</string>
    <string name="infoLogo">Nosso logotipo:</string>
    <string name="nomeCursoInfo">Nome do Curso: Engenharia Informática</string>
    <string name="disciplinaNomeInfo">Disciplina: Desenvolvimento de Aplicativos Móveis</string>
    <string name="anoInfo">Ano Letivo: 2023/2024</string>
    <string name="nAutorInfo">Nº de Autores: 2</string>
    <string name="autoresNomesInfo">Autores: Tiago Cardoso, Tiago Oliveira</string>
    <string name="libsInfo">Bibliotecas e Frameworks:</string>
    <string name="libthreetenabpInfo">- Biblioteca ThreeTenABP (Obtida de: github.com/JakeWharton/ThreeTenABP)</string>
    <string name="libcircleindicatorInfo">- Biblioteca CircleIndicator (Obtida de: github.com/ongakuer/CircleIndicator)</string>
    <string name="libgestureviewsInfo">- Biblioteca GestureViews (Obtida de: github.com/alexvasilkov/GestureViews)</string>
    <string name="libglideInfo">- Biblioteca Glide (Obtida de: github.com/bumptech/glide)</string>
    <string name="libretrofitInfo">- Biblioteca Retrofit2 (Obtida de: quare.github.io/retrofit/)</string>
    <string name="libbiometricInfo">- Biblioteca de Biometria (Obtida de: AndroidX)</string>
    <string name="libswipeInfo">- Biblioteca SwipeRefreshLayout (Obtida de: AndroidX)</string>
    <string name="credenciaisInfo">Credenciais de Acesso:</string>
    <string name="exampleloginInfo">Login: test@email.com</string>
    <string name="examplepassInfo">Password: 1234qwer</string>
</resources>