<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

   <group android:id="@+id/Principal" android:checkableBehavior="single">

       <item
           android:id="@+id/navigation_events"
           android:icon="@drawable/baseline_event_note_24"
           android:title="@string/mainNavEventsButton" />

       <item
           android:id="@+id/navigation_sabias"
           android:icon="@drawable/baseline_question_mark_24"
           android:title="@string/mainNavSabiasButton" />

       <item
           android:id="@+id/navigation_profile"
           android:icon="@drawable/baseline_account_circle_24"
           android:title="@string/mainNavPersonalButton" />

   </group>
    <group android:id="@+id/Secundário" android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_staff"
            android:icon="@drawable/baseline_people_24"
            android:title="@string/mainNavStaffButton" />

        <item
            android:id="@+id/navigation_schedule"
            android:icon="@drawable/baseline_calendar_month_24"
            android:title="Horarios" />

        <item
            android:id="@+id/navigation_info"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/mainNavInfoButton"/>

    </group>
    <group android:id="@+id/Saida" android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="Definições" />

        <item
            android:id="@+id/navigation_logout"
            android:icon="@drawable/baseline_logout_24"
            android:visible="false"
            android:title="Sair" />

    </group>
</menu>