<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_sabias"
        android:icon="@drawable/baseline_question_mark_24"
        android:title="@string/mainNavSabiasButton" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/baseline_event_note_24"
        android:title="@string/mainNavEventsButton" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/mainNavPersonalButton" />

    <item
        android:id="@+id/navigation_none"
        android:title=""
        android:icon="@android:color/transparent"
        android:enabled="false"
        android:visible="false"/>
</menu>