<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/background">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="58dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changePasswordTitle"
        android:textSize="24sp"
        android:textColor="#00574B"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/changePasswordBoxHint"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_background"
        android:padding="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="10dp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/changePasswordConfirmBoxHint"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_background"
        android:padding="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="10dp" />


    <Button
        android:id="@+id/btnResetPassword"
        style="@style/CustomButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generalConfirmButton" />

    <Button
        android:id="@+id/btnBackToLogin"
        style="@style/CustomButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generalBackButton" />

    <ImageView
        android:id="@+id/loading_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:src="@drawable/cotonete"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

</LinearLayout>
