<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.navigation.EventAddFragmento"
    android:background="#FFF8E7"

    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">



            <TextView
                android:id="@+id/eventDetailNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventDetailNameTitle"
                android:textStyle="bold"
                android:paddingBottom="4dp"/>

            <EditText
                android:id="@+id/etNewEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addEventTextEventNameBox"
                android:background="@drawable/edittext_background"
                android:padding="15dp"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E0E0E0"
                android:layout_marginVertical="8dp"/>

            <TextView
                android:id="@+id/eventDetailDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventDetailDescriptionTitle"
                android:textStyle="bold"
                android:paddingBottom="4dp"/>

            <EditText
                android:id="@+id/etNewEventDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addEventTextEventDescBox"
                android:background="@drawable/edittext_background"
                android:padding="15dp"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E0E0E0"
                android:layout_marginVertical="8dp"/>

            <TextView
                android:id="@+id/eventDetailLocationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventDetailLocationTitle"
                android:textStyle="bold"
                android:paddingBottom="4dp"/>

            <EditText
                android:id="@+id/etNewEventLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addEventTextEventLocalBox"
                android:background="@drawable/edittext_background"
                android:padding="15dp"
                android:layout_margin="10dp"
                android:layout_marginHorizontal="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E0E0E0"
                android:layout_marginVertical="8dp"/>

            <TextView
                android:id="@+id/eventDetailDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventDetailDateTitle"
                android:textStyle="bold"
                android:paddingBottom="4dp"/>

            <Button
                android:id="@+id/btnPickDateTime"
                style="@style/CustomButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addEventTextEventAddTimeDateBtn" />

            <TextView
                android:id="@+id/tvSelectedDateTime"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textAlignment="center"
                android:padding="15dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E0E0E0"
                android:layout_marginVertical="8dp"/>

            <TextView
                android:id="@+id/eventDetailTransportTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventDetailTransportTitle"
                android:textStyle="bold"
                android:paddingBottom="4dp"/>

            <CheckBox
                android:id="@+id/checkboxNewEventTransport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addEventTextEventTranspBox"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="10dp">

                <Button
                    android:id="@+id/btnNewEventImageSelect"
                    style="@style/CustomButtonStyleShort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addEventTextEventImgBox"
                    android:layout_marginBottom="8dp"/>

                <Button
                    android:id="@+id/btnNewEventImageCapture"
                    style="@style/CustomButtonStyleShort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addEventTextEventImgBoxCap"
                    android:layout_marginBottom="8dp"/>

            </LinearLayout>



            <ImageView
                android:id="@+id/imageviewNewEventImageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:src="@drawable/default_event_img"/>

            <Button
                android:id="@+id/btnNewEventSubmit"
                style="@style/CustomButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addEventTextEventAddBtn"
                android:layout_marginBottom="8dp"/>

            <ImageView
                android:id="@+id/loading_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/cotonete"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
